tests/functional2/lang/parser-token-whitespace/(1.a).err.exp
error: whitespace between function arguments or list elements is required here. Use --extra-deprecated-features tokens-no-whitespace to disable this error
       at «string»:1:13:
            1| with {}; (1.a)
             |             ^
